repr-trait/test/zero_variants_fail.stderr
error: proc-macro derive panicked
 --> test/zero_variants_fail.rs:1:10
  |
1 | #[derive(repr_trait::PrimitiveRepr)]
  |          ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Can't derive PrimitiveRepr on a zero variant enum
