repr-trait/test/zero_variants_fail.rs
#[derive(repr_trait::PrimitiveRepr)]
enum ZeroVariants {
}

fn main() {

}
